Fix Other Tools spacing: clear float for proper top gap

--- a/css/style.scss
+++ b/css/style.scss
@@ -280,11 +280,12 @@ ul {
 
 .other-tools {
 	text-align: center;
-	padding-top: 60px;
+	padding-top: 40px;
 	padding-bottom: 20px;
 	max-width: 500px;
 	margin: 0 auto;
 	float: none;
+	clear: both;
 
 	h2 {
 		font-family: 'Montserrat', sans-serif;
